Se cambia de lugar control de navegacion entre imagenes; se usa tag de imagen común en vez de componente para una mejor presentación y visualización completa de la imagen

--- a/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.scss
+++ b/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.scss
@@ -13,3 +13,8 @@
     max-height: calc(100lvh - 58px - 58px);
     width: auto;
 }
+
+.cont-gral-visor-ph{
+    height: calc(100lvh - 58px);
+    overflow-y: scroll;
+}
