--- a/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.scss
+++ b/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.scss
@@ -17,4 +17,7 @@
 .cont-gral-visor-ph{
     height: calc(100lvh - 58px);
     overflow-y: scroll;
+    position: absolute;
+    margin-top: 58px;
+    width: 100vw;
 }
