En caso que un concurso este abierto, se oculta nombre de autor

--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -156,8 +156,8 @@
                                   <div class="cont-img-text">
                                     <p><b>{{r.image.title}}</b></p>
                                     <p><i>{{r.section?.name}}</i></p>
-                                    <p>{{ getFullName(r.image.profile_id) }}</p>
-                                    <p *ngIf="!isContestNotFin || !rolificador.esConcursante(u)" >
+                                    <p *ngIf="!isContestNotFin">{{ getFullName(r.image.profile_id) }}</p>
+                                    <p *ngIf="!isContestNotFin" >
                                       <b>{{ r.metric.prize != '0' && r.metric.prize != null && r.metric.prize != undefined ? r.metric.prize : '-' }} </b>
                                     </p>
                                   </div>
