--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -158,7 +158,7 @@
                                     <p><i>{{r.section?.name}}</i></p>
                                     <p *ngIf="!isContestNotFin || rolificador.esDelegado(u) || rolificador.isAdmin(u)">{{ getFullName(r.image.profile_id) }}</p>
                                     <p *ngIf="!isContestNotFin" >
-                                      <b>{{ r.metric.prize != '0' && r.metric.prize != null && r.metric.prize != undefined ? r.metric.prize : '-' }} </b>
+                                      <b>{{ r.metric?.prize ? r.metric.prize : '-' }} </b>
                                     </p>
                                   </div>
                                 </ion-col>
