[#105] Se quita paginación de sección fotografías; vista de fotografías filtrada por concursante se realiza con petición especifica que solo trae los datos necesarios

--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -205,7 +205,7 @@
                 </ion-col>
             </ion-row>
 
-            <ion-row>
+            <!--<ion-row>
               <ion-col>
                 <ion-row class="ion-justify-content-center">
                   <ion-col *ngFor="let page of pages" size="auto" class="pagination-element" [ngClass]="{'pagination-element-active':(concursoDetailService.imagenes_page_number==page.number)}">
@@ -213,7 +213,7 @@
                   </ion-col>
                 </ion-row>
               </ion-col>
-            </ion-row>
+            </ion-row>-->
 
             <ng-template #spinner>
               <ion-row class="ion-justify-content-center">
