--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -131,7 +131,7 @@
 <!-- TODO: revisar pattern -->
                         <ion-input
                             autocapitalize="off"
-                            pattern="[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$"
+                            pattern="[\-a-zA-Z0-9~!$%^&amp;*_=+\}\{'?]+(\.[\-a-zA-Z0-9~!$%^&amp;*_=+\}\{'?]+)*@[a-zA-Z0-9_][\-a-zA-Z0-9_]*(\.[\-a-zA-Z0-9_]+)*\.[cC][oO][mM](:[0-9]{1,5})?"
                             name="email" formControlName="email" [(ngModel)]="usuario.email"
                             required>
                         </ion-input>
