--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -138,7 +138,7 @@
                     </ion-item>
 
 <!--- CONTRASEÑA -->             
-                    <ion-item class="expand-full">
+                    <ion-item class="expand-full" *ngIf="!isLogged() || userLogged?.role_id === 1">
                         <ion-col class="ion-no-padding">
                             <ion-row>
                                 <ion-col class="ion-no-padding" size="10">
