--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -138,7 +138,7 @@
                     </ion-item>
 
 <!--- CONTRASEÑA -->             
-                    <ion-item class="expand-full" *ngIf="!isLogged() || userLogged?.role_id === 1">
+                    <ion-item class="expand-full" *ngIf="!isLogged() || userLogged?.role_id === 1 || userLogged?.role_id === 2">
                         <ion-col class="ion-no-padding">
                             <ion-row>
                                 <ion-col class="ion-no-padding" size="10">
@@ -193,21 +193,19 @@
                         <ion-button (click)="changePassword()">Cambiar contraseña</ion-button>
                     </ion-item>
 
-                    <div *ngIf="isLogged()">
-                        <ion-item
-                            class="expand-full"
-                            *ngIf="!updatingSelect; else spinner">
-                                <ion-label [position]="'stacked'">Rol</ion-label>
-                            
-                                <ion-select
-                                    #sRol  okText="Aceptar" cancelText="Cancelar"
-                                    name="role_id" formControlName="role_id"  [(ngModel)]="usuario.role_id"
-                                    required
-                                    [disabled]="!isAdmin">
-                                    <ion-select-option *ngFor="let r of roles" [value]="r.id">{{r.type}}</ion-select-option>
-                                </ion-select>
-                        </ion-item>
-                    </div>
+                    <ion-item
+                        class="expand-full"
+                        *ngIf="isLogged() && !updatingSelect">
+                            <ion-label [position]="'stacked'">Rol</ion-label>
+                        
+                            <ion-select
+                                #sRol  okText="Aceptar" cancelText="Cancelar"
+                                name="role_id" formControlName="role_id"  [(ngModel)]="usuario.role_id"
+                                required
+                                [disabled]="!isAdmin">
+                                <ion-select-option *ngFor="let r of roles" [value]="r.id">{{r.type}}</ion-select-option>
+                            </ion-select>
+                    </ion-item>
 
                 </ion-row>
 
