[#92] En formulario de edición, el propio usuario no puede modificar su rol (por mas que fuera admin); en edición del propio perfil se oculta el campo contraseña por que el mismo se define con el botón 'cambiar contraseña'; se quita archivo .spec que no se usa

--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -138,7 +138,7 @@
                     </ion-item>
 
 <!--- CONTRASEÑA -->             
-                    <ion-item class="expand-full" *ngIf="!isLogged() || userLogged?.role_id === 1 || userLogged?.role_id === 2">
+                    <ion-item class="expand-full" *ngIf="!isUserProfile && (!isLogged() || userLogged?.role_id === 1 || userLogged?.role_id === 2)">
                         <ion-col class="ion-no-padding">
                             <ion-row>
                                 <ion-col class="ion-no-padding" size="10">
@@ -195,7 +195,7 @@
 
                     <ion-item
                         class="expand-full"
-                        *ngIf="isLogged() && !updatingSelect">
+                        *ngIf="!isUserProfile && isLogged() && !updatingSelect">
                             <ion-label [position]="'stacked'">Rol</ion-label>
                         
                             <ion-select
