--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -78,7 +78,7 @@
                         </ion-item>
 
                         <ion-item
-                            *ngIf="profile.executive == true" 
+                            *ngIf="profileExecutive()" 
                             class="expand-full">
                                 <ion-label position="floating">Rol en la comisión</ion-label>
                                 <ion-input
