--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -57,7 +57,7 @@
                             formControlName="dni" name="dni" [(ngModel)]="profile.dni" required></ion-input>
                     </ion-item>
 
-                    <ion-item *ngIf="(usuario.role_id == 3 || usuario.role_id == 2) && !updatingSelect; else spinner" class="expand-full">
+                    <ion-item  class="expand-full">
                         <ion-label [position]="(profile.fotoclub_id != undefined) ? 'stacked' : 'floating'">Fotoclub/Agrupación/Institución</ion-label>
                             <ion-select
                             #sFotoclub  okText="Aceptar" cancelText="Cancelar"
