--- a/angular/src/app/nav/sidebar/sidebar.component.html
+++ b/angular/src/app/nav/sidebar/sidebar.component.html
@@ -23,6 +23,11 @@
       >
         Organizaciones
       </ion-item>
+      <ion-item *ngIf="rolificador.isAdmin(u) || rolificador.esDelegado(u)"
+        [routerLink]="['/herramientas']"
+      >
+        Herramientas
+      </ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
