--- a/angular/src/app/herramientas/busqueda-fotografias/busqueda-fotografias.page.html
+++ b/angular/src/app/herramientas/busqueda-fotografias/busqueda-fotografias.page.html
@@ -50,6 +50,7 @@
             <ion-card-header>
               <ion-card-title>{{ imagen.title }}</ion-card-title>
               <ion-card-subtitle>Código: {{ imagen.code }}</ion-card-subtitle>
+              <ion-card-subtitle *ngIf="imagen.author">Autor: {{ imagen.author }}</ion-card-subtitle>
             </ion-card-header>
             <ion-card-content>
               <p *ngIf="imagen.description">{{ imagen.description }}</p>
