--- a/angular/src/app/herramientas/busqueda-fotografias/busqueda-fotografias.page.html
+++ b/angular/src/app/herramientas/busqueda-fotografias/busqueda-fotografias.page.html
@@ -51,6 +51,8 @@
               <ion-card-title>{{ imagen.title }}</ion-card-title>
               <ion-card-subtitle>Código: {{ imagen.code }}</ion-card-subtitle>
               <ion-card-subtitle *ngIf="imagen.author">Autor: <strong>{{ imagen.author | titlecase }}</strong></ion-card-subtitle>
+              <ion-card-subtitle *ngIf="imagen.section">Sección: <strong>{{ imagen.section }}</strong></ion-card-subtitle>
+              <ion-card-subtitle *ngIf="imagen.contest?.name">Concurso: <strong>{{ imagen.contest.name }}</strong></ion-card-subtitle>
             </ion-card-header>
             <ion-card-content>
               <p *ngIf="imagen.description">{{ imagen.description }}</p>
@@ -69,6 +71,8 @@
               <ion-card-title>{{ resultados[0].title }}</ion-card-title>
               <ion-card-subtitle>Código: {{ resultados[0].code }}</ion-card-subtitle>
               <ion-card-subtitle *ngIf="resultados[0].author">Autor: <strong>{{ resultados[0].author | titlecase }}</strong></ion-card-subtitle>
+              <ion-card-subtitle *ngIf="resultados[0].section">Sección: <strong>{{ resultados[0].section }}</strong></ion-card-subtitle>
+              <ion-card-subtitle *ngIf="resultados[0].contest?.name">Concurso: <strong>{{ resultados[0].contest.name }}</strong></ion-card-subtitle>
             </ion-card-header>
             <ion-card-content>
               <p *ngIf="resultados[0].description">{{ resultados[0].description }}</p>
