--- a/angular/src/app/herramientas/herramientas.page.html
+++ b/angular/src/app/herramientas/herramientas.page.html
@@ -33,5 +33,17 @@
         </ion-card>
       </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col size="12" size-sm="6" size-md="4" size-lg="3">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>Juzgamiento</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-button expand="block" color="secondary" (click)="cargarResultados()">Cargar Resultados</ion-button>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
   </ion-grid>
 </ion-content> 
