--- a/angular/src/app/herramientas/herramientas.page.html
+++ b/angular/src/app/herramientas/herramientas.page.html
@@ -32,15 +32,17 @@
           </ion-card-content>
         </ion-card>
       </ion-col>
-    </ion-row>
-    <ion-row>
       <ion-col size="12" size-sm="6" size-md="4" size-lg="3">
         <ion-card>
           <ion-card-header>
             <ion-card-title>Juzgamiento</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <ion-button expand="block" color="secondary" (click)="cargarResultados()">Cargar Resultados</ion-button>
+            <div style="margin-bottom: 8px; color: #666; font-size: 14px;">
+              Tamaño máximo de archivo permitido: 2 GB (.zip)
+            </div>
+            <input type="file" #fileInput accept=".zip" style="display: none;" (change)="onFileSelected($event)">
+            <ion-button expand="block" color="secondary" (click)="fileInput.click()">Cargar Resultados</ion-button>
           </ion-card-content>
         </ion-card>
       </ion-col>
