--- a/angular/src/app/herramientas/carga-resultados/carga-resultados.page.html
+++ b/angular/src/app/herramientas/carga-resultados/carga-resultados.page.html
@@ -32,6 +32,13 @@
             no existe directorio exportacion
           </ion-card-content>
         </ion-card>
+        <ng-container *ngIf="exportacionValida && validacionesCategorias.length > 0">
+          <ion-card *ngFor="let val of validacionesCategorias" [color]="val.color">
+            <ion-card-content>
+              {{ val.mensaje }}
+            </ion-card-content>
+          </ion-card>
+        </ng-container>
       </ion-col>
     </ion-row>
   </ion-grid>
